# zippy_clipper

./: ArchInstall.script  DebInstall.script  FedInstall.script  LICENSE.gpl  Makefile  Makefile.in  README.md  README.txt  WINDOWS-README.txt  Zippy.c.in  Zippy.glade  config.status  configure  configure.ac  copyright  encoder-bin  eresource.c  part1.glade  resource.gresource  resource.h  resource.xml  title.txt  wsl-libvlc-4-install.script
css/: 000.txt  albumButton.css  exit_pgm.css  gtk.css  haltProgram.css  lastPage.css  micMute.css  pauseAtEnd.css  pauseAtEnd1.css  pauseVideo.css  playPgm.css  playerx.css  priorPage.css  pspbrwse.jbf  randomize.css  save1.css  showCurrent.css  skipNext.css  sndrPlayed.css  stack.css  switcher.css  window.css
howto/: program.lst
icons/: pspbrwse.jbf
include/: helpme.txt
include/zippy/: config.h  config.h.in
sgr-code/common/: audio.c.in  camx.c.in  common-objects.h.in  common-widgets.h.in  convert-gif.c.in  convert-mkv.c.in  convert-webm.c.in  crop-control.c.in  cut-paste-drag.c.in  delete-dialog.c.in  ffmpeg-filter.c.in  file-choose.c.in  file-rename-dialog.c.in  frame-mode.c.in  geo-test.c.in  gettime.c.in  global-vars.h.in  gtk-code.c.in  halt-program.c.in  insert-text-dialog.c.in  load-program.c.in  main-timer.c.in  make-clip.c.in  media-probe.c.in  monochrome.c.in  play-buttons.c.in  playback-scrollbar.c.in  playclip.c.in  probe-buttons.c.in  rearrange-program.c.in  save-program.c.in  sharpen.c.in  stills.c.in  tiled-clips.c.in  window-main-fcns.c.in  xcamera0.c.in
sgv-code/ScreenEncoder/: encoder.c
sgv-code/common/: adjust-video.c.in  audio-filters.c.in  clip-from-still.c.in  clip-settings.c.in  clip-speed.c.in  common-compiled-code.c.in  common-externs.h.in  common-fcn-headers.h.in  convert-mov.c.in  convert-mp4.c.in  defines.h.in  dir-choose.c.in  draw2-draw.c.in  duplicate.c.in  edge-detect.c.in  edit-panel-scroll.c.in  ff-run.c.in  file-probe.c.in  file-stat.c.in  file-type.c.in  global-variables.h  hot-keys.c.in  includes.h.in  join-clips.c.in  loop-stream.c.in  media-playback.c.in  memory-alloc.c.in  mhd-ref.c.in  negative.c.in  new-name.c.in  overlay.c.in  play-check-box.c.in  playback-speed.c.in  preview-run.c.in  program-buttons.c.in  pulse.c.in  query-tooltip.c.in  reverse.c.in  rotators.c.in  scale-videos.c.in  (+12 more)
